# monday-talk-2019

./: .gitignore  .gitmodules  Makefile  Readme.rst  python_fractal
fractal-draw/: Cargo.toml
fractal-draw/src/: lib.rs
fractal-theme/: Cargo.toml
fractal-theme/src/: lib.rs
fractal-web/: index.html  main.js  style.css  worker.js
slides/: slides.rst
wasm-simple/: Cargo.toml
wasm-simple/src/: lib.rs
