[package]
name = "fractal-theme"
version = "0.1.0"
authors = ["Curtis Millar <curtis@curtism.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["simple"]
simple = []
red = []
green = []
blue = []
position = []
demo = []
royal = []
